--- a/.cqfd/docker/Dockerfile
+++ b/.cqfd/docker/Dockerfile
@@ -36,7 +36,7 @@ RUN set -x \
     && sed -i "s/# en_US\.UTF-8 UTF-8/en_US\.UTF-8 UTF-8/" /etc/locale.gen \
     && locale-gen \
     && dpkg-reconfigure locales \
-    && pip install "ansible>=2.9,<2.10,!=2.9.10" \
+    && pip install "ansible>==2.10" \
     && rm -rf /var/lib/{apt,dpkg,cache,log}/*
 
 COPY check_yaml.sh /usr/bin/check_yaml
