seapath_setup_main: edit hosts running "configure SNMP"
This task should not be run on the observer.

Signed-off-by: Tanguy Raufflet <tanguy.raufflet@savoirfairelinux.com>

--- a/playbooks/seapath_setup_snmp.yaml
+++ b/playbooks/seapath_setup_snmp.yaml
@@ -12,8 +12,7 @@
 
 - name: Configure snmp
   hosts:
-    - cluster_machines
-    - standalone_machine
+    - hypervisors
   become: true
   roles:
     - snmp
