roles: playbooks: vars: use new detect_seapath_distro role
Use the new detect_seapath_distro role to detect the Seapath
distribution and conditionally execute distro specific tasks.
This replaces the use of the ansible_distribution fact. This fact cannot
be used with Yocto Seapath as it depends on the DISTRO_NAME configured
during build.

This new role sets a seapath_distro fact to use by playbooks and roles.
* Replace the use of ansible_distribution in roles by seapath_distro.
  Also add detect_seapath_distro a requirement for these roles
  to make sure seapath_distro is always set.
* Call the detect_seapath_distro role and use seapath_distro
  in playbooks needing it.
* Rename "Seapath_host_Yocto_distribution.yml" vars files to "Yocto.yml"
  to match and use seapath_distro.

Signed-off-by: Elinor Montmasson <elinor.montmasson@savoirfairelinux.com>

--- a/playbooks/cluster_setup_ceph.yaml
+++ b/playbooks/cluster_setup_ceph.yaml
@@ -12,6 +12,12 @@
   roles:
     - ceph_prepare_installation
 
+- name: Detect Seapath distribution
+  hosts:
+    osds
+  roles:
+    - detect_seapath_distro
+
 - name: Ceph Expansion VG
   hosts:
       osds
@@ -19,7 +25,7 @@
   gather_facts: yes
   roles:
     - role: ceph_expansion_vg
-      when: ansible_distribution | regex_search("Debian")
+      when: seapath_distro == "Debian"
 - name: Ceph Expansion LV
   hosts:
       osds
@@ -28,7 +34,7 @@
   serial: 1
   roles:
     - role: ceph_expansion_lv
-      when: ansible_distribution | regex_search("Debian")
+      when: seapath_distro == "Debian"
 - import_playbook: ../ceph-ansible/site.yml
 
 # Ceph mgr module which is enabled by default is not supported by SEAPATH.
