--- a/roles/add_livemigration_user/tasks/main.yml
+++ b/roles/add_livemigration_user/tasks/main.yml
@@ -3,16 +3,6 @@
 
 ---
 - block:
-  - name: Extract distribution name
-    set_fact:
-      base_distribution: >-
-        {%- if ansible_distribution | regex_search("Debian") -%}
-        Debian
-        {%- elif ansible_distribution | regex_search("CentOS") -%}
-        CentOS
-        {%- elif ansible_distribution | regex_search("Yocto") -%}
-        Yocto
-        {%- endif -%}
   - name: Define specific variables by distribution
     set_fact:
       livemigration_config:
@@ -33,8 +23,8 @@
       name: "{{ livemigration_user }}"
       shell: /bin/bash
       system: true
-      groups: "{{ livemigration_config[base_distribution].groups }}"
-      create_home: "{{ livemigration_config[base_distribution].create_home }}"
+      groups: "{{ livemigration_config[seapath_distro].groups }}"
+      create_home: "{{ livemigration_config[seapath_distro].create_home }}"
   - name: Unlock the user
     replace:
         path: /etc/shadow
@@ -51,14 +41,14 @@
       force: false
   - name: create livemigration ssh directory
     file:
-      path: "{{ livemigration_config[base_distribution].ssh_path }}"
+      path: "{{ livemigration_config[seapath_distro].ssh_path }}"
       state: directory
       mode: '0700'
       owner: "{{ livemigration_user }}"
   - name: Get root user's home directory
     shell: getent passwd root | cut -d ':' -f6
     register: root_home_dir
-    when: base_distribution in ['Debian', 'CentOS']
+    when: seapath_distro in ['Debian', 'CentOS']
   - name: Fetch the root keyfile
     fetch:
       src: "{{ root_home_dir.stdout | default (ansible_env['HOME']) }}/.ssh/id_rsa.pub"
@@ -68,7 +58,7 @@
     authorized_key:
       user: "{{ livemigration_user }}"
       state: present
-      path: "{{ livemigration_config[base_distribution].ssh_path + '/authorized_keys'}}"
+      path: "{{ livemigration_config[seapath_distro].ssh_path + '/authorized_keys'}}"
       key: "{{ lookup('file','buffer/' + item + '-id_rsa.pub') }}"
     with_items: "{{ groups['hypervisors'] }}"
   - name: Copy the key to admin user's authorized_keys using Ansible module
@@ -78,7 +68,7 @@
       path: "/home/{{ admin_user }}/.ssh/authorized_keys"
       key: "{{ lookup('file','buffer/' + item + '-id_rsa.pub') }}"
     with_items: "{{ groups['hypervisors'] }}"
-    when: base_distribution in ['Debian', 'CentOS']
+    when: seapath_distro in ['Debian', 'CentOS']
   - name: Fetch the ssh keyfile
     fetch:
       src: "/etc/ssh/ssh_host_ed25519_key.pub"
