--- a/roles/ceph_prepare_installation/tasks/main.yml
+++ b/roles/ceph_prepare_installation/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Cleanup Ceph OSD disks with ceph-volume
   command: "ceph-volume lvm zap {{ ceph_osd_disk }} --destroy"
-  when: new_ceph_installation.changed and ansible_distribution | regex_search("Yocto")
+  when: new_ceph_installation.changed and seapath_distro == "Yocto"
 
 - name: Prepare OSD disk
   block:
@@ -73,4 +73,4 @@
       when:
         - lvm_volumes is not defined or ansible_lvm['lvs'][lvm_volumes[0].data] is not defined
   when:
-    - new_ceph_installation.changed and ansible_distribution | regex_search("Debian")
+    - new_ceph_installation.changed and seapath_distro == "Debian"
