--- a/.github/workflows/ci-yocto.yml
+++ b/.github/workflows/ci-yocto.yml
@@ -54,6 +54,6 @@ jobs:
         run: cd ${{ env.WORK_DIR }};
              ci/launch-yocto.sh report;
 
-      - name: Clean
-        if: always()
-        run: rm -rf $WORK_DIR;
+      # - name: Clean
+      #   if: always()
+      #   run: rm -rf $WORK_DIR;
