--- a/roles/deploy_python3_setup_ovs/tasks/main.yml
+++ b/roles/deploy_python3_setup_ovs/tasks/main.yml
@@ -2,16 +2,19 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-- name: Synchronization of src python3-setup-ovs on the control machine to dest on the remote hosts
-  ansible.posix.synchronize:
-    src: python3-setup-ovs
-    dest: /tmp/src
-    rsync_opts:
-      - "--chown=root:root"
-- name: Install python3-setup-ovs
-  command:
-    cmd: /usr/bin/python3 setup.py install
-    chdir: /tmp/src/python3-setup-ovs
+# move this to containerfile
+#- name: Synchronization of src python3-setup-ovs on the control machine to dest on the remote hosts
+#  ansible.posix.synchronize:
+#    src: python3-setup-ovs
+#    dest: /tmp/src
+#    rsync_opts:
+#      - "--chown=root:root"
+#- name: Install python3-setup-ovs
+#  command:
+#    cmd: /usr/bin/python3 setup.py install
+#    chdir: /tmp/src/python3-setup-ovs
+#
+# TODO: this should be moved to the containerfile
 - name: Copy seapath-config_ovs.service
   ansible.builtin.copy:
     src: seapath-config_ovs.service
