--- a/roles/centos_hypervisor/tasks/main.yml
+++ b/roles/centos_hypervisor/tasks/main.yml
@@ -186,53 +186,53 @@
     #     - tuned-profiles-realtime
     #    state: present
 
-- name: Remove old isolation files
-  file:
-    state: absent
-    path: "{{ item }}"
-  with_items:
-    - /etc/sysfs.d/00-workqueue_cpumask.conf
-    - /etc/systemd/system/kthread-taskset.service
-    - /usr/local/bin/taskset_boot.sh
-    - /etc/systemd/system/multi-user.target.wants/kthread-taskset.service
-    - /etc/sysctl.d/00-schedrt.conf
-    - /etc/default/grub.d/10-isolcpus.cfg
-
-- name: create tuned seapath-rt profile folder
-  file:
-    path: /etc/tuned/seapath-rt-host
-    state: directory
-    mode: '0755'
-
-- name: copy seapath-rt-host tuned profile conf
-  template:
-    src: tuned.conf.j2
-    dest: /etc/tuned/seapath-rt-host/tuned.conf
-    group: root
-    owner: root
-    mode: '0644'
-
-- name: remove tuned dynamic tuning
-  lineinfile:
-    path: /etc/tuned/tuned-main.conf
-    state: present
-    regexp: '^#?dynamic_tuning = .*$'
-    line: 'dynamic_tuning = 0'
-
-- name: enable tuned.service
-  ansible.builtin.systemd:
-    name: tuned.service
-    enabled: yes
-    state: restarted
-
-- name: load seapath-rt-host tuned profile
-  ansible.builtin.command: tuned-adm profile seapath-rt-host
-  when: isolcpus is defined
-
-- name: unload tuned profile
-  ansible.builtin.command: tuned-adm off
-  when: isolcpus is not defined
-
+    #- name: Remove old isolation files
+    #  file:
+    #    state: absent
+    #    path: "{{ item }}"
+    #  with_items:
+    #    - /etc/sysfs.d/00-workqueue_cpumask.conf
+    #    - /etc/systemd/system/kthread-taskset.service
+    #    - /usr/local/bin/taskset_boot.sh
+    #    - /etc/systemd/system/multi-user.target.wants/kthread-taskset.service
+    #    - /etc/sysctl.d/00-schedrt.conf
+    #    - /etc/default/grub.d/10-isolcpus.cfg
+    #
+    #- name: create tuned seapath-rt profile folder
+    #  file:
+    #    path: /etc/tuned/seapath-rt-host
+    #    state: directory
+    #    mode: '0755'
+    #
+    #- name: copy seapath-rt-host tuned profile conf
+    #  template:
+    #    src: tuned.conf.j2
+    #    dest: /etc/tuned/seapath-rt-host/tuned.conf
+    #    group: root
+    #    owner: root
+    #    mode: '0644'
+    #
+    #- name: remove tuned dynamic tuning
+    #  lineinfile:
+    #    path: /etc/tuned/tuned-main.conf
+    #    state: present
+    #    regexp: '^#?dynamic_tuning = .*$'
+    #    line: 'dynamic_tuning = 0'
+    #
+    #- name: enable tuned.service
+    #  ansible.builtin.systemd:
+    #    name: tuned.service
+    #    enabled: yes
+    #    state: restarted
+    #
+    #- name: load seapath-rt-host tuned profile
+    #  ansible.builtin.command: tuned-adm profile seapath-rt-host
+    #  when: isolcpus is defined
+    #
+    #- name: unload tuned profile
+    #  ansible.builtin.command: tuned-adm off
+    #  when: isolcpus is not defined
+    #
 
 - name: Create ovs-vswitchd.service.d directory
   file:
